Fix navbar and hamburger menu button responsiveness on tablet and mobile devices.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -285,7 +285,7 @@ p {
   border: 1px solid rgb(48, 49, 51);
   border-radius: 50%;
   box-shadow: inset 0 0 0 2px rgb(233, 76, 29);
-    0 0 0 4px rgb(233, 76, 29);
+     
 }
 
 /* 
@@ -559,14 +559,14 @@ a {
 }
 
 
-
+/* 
 /* Stop letter animation on small devices*/
-.noanimated {
+/* .noanimated {
   -webkit-animation-duration: none;
-  animation-duration: none;
+  animation-duration:unset; 
   -webkit-animation-fill-mode: none;
   animation-fill-mode: none;
-}
+} */ 
 
 
 /* Page 404 and 500 */
@@ -585,7 +585,15 @@ a {
 /* Media queries */
 
 @media only screen and (max-width: 1000px) {
-  
+  .hamburger {
+    display: block;
+    border: 0;
+    background-color: transparent;
+    color: white;
+    font-size: 30px;
+    margin: 20px;
+    align-self: flex-end;
+}
   .letters {
     font-size: 40px;
   }
